Add email verification status handling